tools/flowc/tests/errors/error44_2.flow
import tools/flowc/tests/errors/error44;

export {
	cyclic2() -> void;
}

cyclic2() -> void {
	cyclic();
}
